--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/upload-artifact@v2-preview
       with:
         name: chaostoolkit-gandi-packages
-        path: dist/chaostoolkit-*
+        path: dist/chaostoolkit*
 
   create-gh-release:
     runs-on: ubuntu-latest
